# bienestar-docente-server

./: .env.example  Dockerfile  VPS_DEPLOY_INSTRUCTIONS.md  calendar_service.py  config.py  database.py  docker-compose.yml  google_auth.py  main.py  pyproject.toml  requirements.txt
models/: __init__.py  community.py  mood.py  user.py
routers/: auth.py  chat.py  community.py  mood.py
schemas/: chat.py  community.py  mood.py  user.py
services/: ai_service.py  auth_service.py
